--- a/index.html
+++ b/index.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0">
-    <meta name="description" content=""/>
-    <meta name="author" content=""/>
-
-    <title>Европомпа</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link type="text/css" rel="stylesheet" href="css/bootstrap.css"/>
-
-    <!-- Custom CSS -->
-    <link href="css/index.css" rel="stylesheet">
-
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1.0">
+<meta name="description" content=""/>
+<meta name="author" content=""/>
+<title>Европомпа</title>
+<!-- Bootstrap Core CSS -->
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Custom CSS -->
+<link href="css/index.css" rel="stylesheet">
+<!--[if lt IE 9]>
+<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+<![endif]-->
 
 </head>
     <body>
@@ -33,28 +30,30 @@
                         <li><a href="#">словарь терминов</a></li>
                         <li><a href="#">контакты</a></li>
                         <li class="nav-link-right"><p><a href="#">войти</a>
-                            <span class="or-text">или</span>
-                            <a href="#">зарегистрироваться</a></p></li>
+                        <span class="or-text">или</span>
+                        <a href="#">зарегистрироваться</a></p></li>
                     </ul>
-                    <!-- Basket -->
+                    <!-- ------------------------------------------------------------------------------------ BASKET -->
                     <ul class="nav navbar-nav navbar-right" id="basket">
                         <li>
-                            <div id="circle">
+                            <div id="basket__circle">
                                 <p>4</p>
                             </div>
-                            <div id="img-basket"><a href="#">
+                            <div class="basket__img"><a href="#">
                                 <img src="img/basket.png" alt="basket"/>
                             </a>
                             </div>
                             <p>20 457 р.</p>
                         </li>
-                    </ul><!-- end basket -->
-                    <div class="nav-underline"></div>
-                    <div class="row nav-on-bottom">
-                        <div class="col-lg-3 col-md-3 col-sm-2 col-xs-1 header-logo">
+                    </ul>
+                    <!-- ------------------------------------------------------------------------------- /end basket -->
+                    <div class="nav-underline__underline"></div>
+                    <!-- -------------------------------------------------------------------------- NAVBAR WITH LOGO -->
+                    <div class="row navbar-with-logo">
+                        <div class="col-lg-3 col-md-3 col-sm-2 col-xs-1 navbar__logo">
                             <a href="#"><img src="img/logo.png" alt="logo"/></a>
                         </div>
-                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-9 header-links">
+                        <div class="col-lg-8 col-md-8 col-sm-8 col-xs-9 navbar__links">
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
                                 <p class="phone-number">+7 (495) 645—93—36</p>
                             </div>
@@ -64,15 +63,17 @@
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 recall">
                                 <p>мы перезвоним с 08:00 до 20:00</p>
                             </div>
-                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 header-link-right">
+                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 navbar__mail">
                                 <img src="img/envelope.png" alt="письмо"/><a href="#">info@europompa.ru</a>
                             </div>
                         </div>
                     </div>
+                    <!-- --------------------------------------------------------------------- /end navbar with logo -->
                 </nav>
             </div>
-        <!-- Sidebar + search -->
+
         <div id="sidebar-navigation">
+            <!-- -------------------------------------------------------------------------------- SIDEBAR NAVIGATION -->
             <div class="container-fluid">
                 <div class="row no-gutter">
                     <div class="col-md-3 col-sm-3 nav-sidebar" id="small-sidebar">
@@ -89,8 +90,8 @@
                                                 </span>
                                                 <p>каталог товаров</p>
                                             </div>
-                                            <span class="sidebar-top-icon">
-                                                <img src="img/sidebar-header-icon.png" alt=""/><span class="sidebar-number">5</span>
+                                            <span class="sidebar__icon">
+                                                <img src="img/sidebar-icon.png" alt=""/><span class="sidebar-number">5</span>
                                             </span>
                                         </div>
                                     </div>
@@ -98,10 +99,10 @@
                                 <!-- Hidden basket -->
                                 <ul id="basket-xs">
                                     <li>
-                                        <div id="circle-xs">
+                                        <div id="basket__circle-xs">
                                             <p>4</p>
                                         </div>
-                                        <div id="img-basket"><a href="#">
+                                        <div class="basket__img"><a href="#">
                                             <img src="img/basket.png" alt="basket"/><p class="price">20 457 р.</p>
                                         </a>
                                         </div>
@@ -115,8 +116,8 @@
                                             <div class="col-md-7 col-sm-7">
                                                 <p>каталог товаров</p>
                                             </div>
-                                            <span class="sidebar-top-icon">
-                                                <img src="img/sidebar-header-icon.png" alt=""/><span class="sidebar-number">5</span>
+                                            <span class="sidebar__icon">
+                                                <img src="img/sidebar-icon.png" alt=""/><span class="sidebar-number">5</span>
                                             </span>
                                         </div>
                                     </div>
@@ -293,9 +294,9 @@
                         <div class="col-md-9 col-sm-9">
                             <div class="row content">
                                 <div class="col-md-1 col-sm-1">
-                                    <div class="underline"></div>
+                                    <div class="underline__underline"></div>
                                 </div>
-                                <div class="col-md-11 col-sm-11 col-xs-10 title-first">
+                                <div class="col-md-11 col-sm-11 col-xs-10 content__title-popular">
                                     <h2>популярные категории</h2>
                                 </div>
                             </div>
@@ -397,10 +398,10 @@
                                 </div><!-- end hidden popular slider-->
                             </div>
                             <!-- Новости -->
-                            <div class="col-md-12 col-sm-12 content-title content">
+                            <div class="col-md-12 col-sm-12 content content-title">
                                 <div class="row">
                                     <div class="col-md-1 col-sm-1">
-                                        <div class="underline"></div>
+                                        <div class="underline__underline"></div>
                                     </div>
                                     <div class="col-md-9 col-sm-8 title">
                                         <h2>Новости</h2>
@@ -414,12 +415,12 @@
                                 <div class="col-md-4 col-sm-4">
                                     <div class="row">
                                         <div class="col-md-4 col-sm-4">
-                                            <p class="news-date">26 октября 2016</p>
+                                            <p class="news__date">26 октября 2016</p>
                                         </div>
                                         <div class="col-md-8 col-sm-8">
                                             <img src="img/news-1.jpg" alt=""/>
                                         </div>
-                                        <div class="col-md-12 col-sm-12 news-links">
+                                        <div class="col-md-12 col-sm-12 news__links">
                                             <a href="#"><h4>Grundfos SOLAR-снимают с производства</h4></a>
                                             <p>
                                                 Настоящим сообщаем Вам, что ООО «Грундфос» прекращает производство
@@ -431,12 +432,12 @@
                                 <div class="col-md-4 col-sm-4">
                                     <div class="row">
                                         <div class="col-md-4 col-sm-4">
-                                            <p class="news-date">13 октября 2015</p>
+                                            <p class="news__date">13 октября 2015</p>
                                         </div>
                                         <div class="col-md-8 col-sm-8">
                                             <img src="img/news-2.jpg" alt=""/>
                                         </div>
-                                        <div class="col-md-12 col-sm-12 news-links">
+                                        <div class="col-md-12 col-sm-12 news__links">
                                             <a href="#"><h4>Новая линейка колодезных насосов GRUNDFOS</h4></a>
                                             <p>
                                                 Начало продаж новой линейки колодезных насосов GRUNDFOS SB и GRUNDFOS SBA.
@@ -447,12 +448,12 @@
                                 <div class="col-md-4 col-sm-4">
                                     <div class="row">
                                         <div class="col-md-4 col-sm-4">
-                                            <p class="news-date">28 апреля 2014</p>
+                                            <p class="news__date">28 апреля 2014</p>
                                         </div>
                                         <div class="col-md-8 col-sm-8">
                                             <img src="img/news-3.jpg" alt=""/>
                                         </div>
-                                        <div class="col-md-12 col-sm-12 news-links">
+                                        <div class="col-md-12 col-sm-12 news__links">
                                             <a href="#"><h4>Новые погружные осевые насосы KPL.E от GRUNDFOS для сверхнизких напоров</h4></a>
                                             <p>В апреле 2016 г.</p>
                                         </div>
@@ -462,7 +463,7 @@
                             <div class="col-md-9 col-sm-9 col-xs-9 content-title content">
                                 <div class="row">
                                     <div class="col-md-1 col-sm-1 col-xs-1">
-                                        <div class="underline"></div>
+                                        <div class="underline__underline"></div>
                                     </div>
                                     <div class="col-md-11 col-sm-11 col-xs-12 title">
                                         <h2>Популярные типы насосов</h2>
@@ -475,7 +476,7 @@
                                         <div class="col-md-3 col-sm-3 col-xs-12">
                                             <p class="author-number">1</p>
                                         </div>
-                                        <div class="col-md-9 col-sm-9 col-xs-11 col-xs-offset-0 news-links">
+                                        <div class="col-md-9 col-sm-9 col-xs-11 col-xs-offset-0 news__links">
                                             <a href="#"><h4>Циркуляционные</h4></a>
                                             <a href="#"><h4>Скважинные</h4></a>
                                             <a href="#"><h4>Колодезные</h4></a>
@@ -488,7 +489,7 @@
                                         <div class="col-md-3 col-sm-3 col-xs-12">
                                             <p class="author-number">2</p>
                                         </div>
-                                        <div class="col-md-9 col-sm-9 col-xs-11 col-xs-offset-0 news-links">
+                                        <div class="col-md-9 col-sm-9 col-xs-11 col-xs-offset-0 news__links">
                                             <a href="#"><h4>Канализационные установки</h4></a>
                                             <a href="#"><h4>Станции водоснабжения</h4></a>
                                         </div>
@@ -499,7 +500,7 @@
                                         <div class="col-md-3 col-sm-3 col-xs-12">
                                             <p class="author-number">3</p>
                                         </div>
-                                        <div class="col-md-9 col-sm-9 col-xs-12 news-links">
+                                        <div class="col-md-9 col-sm-9 col-xs-12 news__links">
                                             <a href="#"><h4>Насосы для загрязненной воды</h4></a>
                                         </div>
                                     </div>
@@ -508,7 +509,7 @@
                             <div class="col-md-9 col-sm-9 col-xs-9 content-title content">
                                 <div class="row">
                                     <div class="col-md-1 col-sm-1 col-xs-1">
-                                        <div class="underline"></div>
+                                        <div class="underline__underline"></div>
                                     </div>
                                     <div class="col-md-11 col-sm-11 col-xs-12 title">
                                         <h2>Производители</h2>
@@ -598,7 +599,7 @@
                     <h5>каталог продукции</h5>
                     <div class="col-md-1 col-sm-1 col-xs-1">
                         <div class="row">
-                            <div class="underline-2"></div>
+                            <div class="underline__underline-2"></div>
                         </div>
                     </div>
                     <div class="col-md-11 col-sm-11 col-xs-11">
@@ -632,7 +633,7 @@
                     <h5>посетителям</h5>
                     <div class="col-md-1 col-sm-1 col-xs-1">
                         <div class="row">
-                            <div class="underline-2"></div>
+                            <div class="underline__underline-2"></div>
                         </div>
                     </div>
                     <div class="col-md-11 col-sm-11 col-xs-11 visitors">
@@ -652,7 +653,7 @@
                     <h5>контакты</h5>
                     <div class="col-md-1 col-sm-1 col-xs-1">
                         <div class="row">
-                            <div class="underline-2"></div>
+                            <div class="underline__underline-2"></div>
                         </div>
                     </div>
                     <div class="col-md-11 col-sm-11 col-xs-11 col-xs-offset-0">
@@ -676,14 +677,12 @@
             </div>
         </div>
 
+    <!-- jQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
-<!-- jQuery -->
-<script src="js/jquery-3.1.1.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.js"></script>
-
-<!-- Custom JavaScript -->
-<script src="js/index.js"></script>
+    <!-- Custom JavaScript -->
+    <script src="js/index.js"></script>
     </body>
 </html>
