--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="author" content=""/>
 <title>Европомпа</title>
 <!-- Bootstrap Core CSS -->
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Custom CSS -->
 <link href="css/index.css" rel="stylesheet">
@@ -678,9 +678,10 @@
         </div>
 
     <!-- jQuery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/jquery-3.1.1.js"></script>
+
     <!-- Bootstrap Core JavaScript -->
-    <script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- Custom JavaScript -->
     <script src="js/index.js"></script>
